--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ button{
     margin-bottom: 10px;
     cursor: pointer;
 }
-#weather_result{
+.weather_result{
     margin-top: 10px;
     font-size: 12px;
 }
